--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul id="file-list"></ul>
 
     <script>
-        const username = 'Your-Username'; // Replace with your GitHub username
-        const repo = 'Your-Username.github.io'; // Replace with your repository name
+        const username = 'TwCamel'; // Replace with your GitHub username
+        const repo = 'twcamel.github.io'; // Replace with your repository name
 
         fetch(`https://api.github.com/repos/${username}/${repo}/contents/`)
             .then(response => response.json())
