--- a/index.html
+++ b/index.html
@@ -3,32 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages File List</title>
+    <title>Markdown Viewer</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+        }
+        #content {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        #file-list {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Files in this repository:</h1>
-    <ul id="file-list"></ul>
+    <div id="content" class="markdown-body">
+        <h1>Markdown Viewer</h1>
+        <div id="file-list"></div>
+        <div id="markdown-content"></div>
+    </div>
 
     <script>
-        const username = 'TwCamel'; // Replace with your GitHub username
-        const repo = 'twcamel.github.io'; // Replace with your repository name
+    const username = 'TwCamel';
+    const repo = 'twcamel.github.io';
 
-        fetch(`https://api.github.com/repos/${username}/${repo}/contents/`)
-            .then(response => response.json())
-            .then(data => {
-                const fileList = document.getElementById('file-list');
-                data.forEach(item => {
-                    if (item.type === 'file' && item.name !== 'index.html') {
-                        const li = document.createElement('li');
-                        const a = document.createElement('a');
-                        a.href = item.name;
-                        a.textContent = item.name;
-                        li.appendChild(a);
-                        fileList.appendChild(li);
-                    }
-                });
-            })
-            .catch(error => console.error('Error:', error));
+    async function fetchMarkdownFiles() {
+        try {
+            const response = await fetch(`https://api.github.com/repos/${username}/${repo}/contents/`);
+            const data = await response.json();
+            const fileList = document.getElementById('file-list');
+            data.forEach(item => {
+                if (item.type === 'file' && item.name.endsWith('.md')) {
+                    const li = document.createElement('li');
+                    const a = document.createElement('a');
+                    a.href = '#';
+                    a.textContent = item.name;
+                    a.onclick = () => loadMarkdown(item.name);
+                    li.appendChild(a);
+                    fileList.appendChild(li);
+                }
+            });
+        } catch (error) {
+            console.error('Error fetching files:', error);
+        }
+    }
+
+    async function loadMarkdown(filename) {
+        try {
+            const response = await fetch(`https://raw.githubusercontent.com/${username}/${repo}/main/${filename}`);
+            const text = await response.text();
+            document.getElementById('markdown-content').innerHTML = marked.parse(text);
+        } catch (error) {
+            console.error('Error loading Markdown:', error);
+        }
+    }
+
+    fetchMarkdownFiles();
     </script>
 </body>
 </html>
