--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown Viewer</title>
+    <title>TwCamel's 算法紀錄</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.min.css">
     <style>
@@ -14,8 +14,9 @@
             padding: 20px;
         }
         #content {
-            max-width: 800px;
+            max-width: 1133px;
             margin: 0 auto;
+            padding: 13px 33px;
         }
         #file-list {
             margin-bottom: 20px;
@@ -24,7 +25,7 @@
 </head>
 <body>
     <div id="content" class="markdown-body">
-        <h1>Markdown Viewer</h1>
+        <h1>TwCamel's 算法紀錄</h1>
         <div id="file-list"></div>
         <div id="markdown-content"></div>
     </div>
